# portfolio

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  README.md  babel.config.js  components.json  eslint.config.cjs  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: app.py  pyproject.toml
backend/nsportfoliobackend/: __init__.py
nsPortfolioBackend/: pyproject.toml
nsportfoliobackend/: .flaskenv  README.md
src/: App.css  App.jsx  App.tsx  ContactMe.tsx  Hero.tsx  HeroBackground.tsx  HeroBackgroundStars.css  HeroSvgText.css  HeroSvgText.tsx  Index.css  Index.tsx  Portfolio.tsx  Reveal.jsx  ThemeSwitch.tsx  Three.tsx  Title.tsx  contactContext.tsx  globals.css  index.css  main.jsx  main.tsx
src/Header/: Header.css  Header.tsx  HeaderLink.tsx  ThemeSwitcher.tsx
src/components/edil-ozi/: background-grid.tsx  rotate-between.tsx
src/context/: ThemeProvider.tsx  theme.ts
src/hooks/: use-outside-click.tsx
src/icebox/: IceboxLogin.tsx  MultiFileUploader.tsx
src/template/: BeyondCode.tsx  Education.tsx  Experience.tsx  Footer.jsx  Footer.tsx  GithubLink.tsx  GravitySimulation.tsx  Header.jsx  Header.tsx  IconList.tsx  Logo.jsx  ProgrammingPhilosophy.tsx  Projects.tsx  QuoteBox.tsx  RandomIdeas.tsx  Refresh.jsx  Section.tsx  SelfAdd.tsx  Sidebar.css  Sidebar.jsx  Sidebar.tsx  SkillCard.tsx  Skills.tsx  VisualNpmDemo.tsx  contactMe.tsx
src/three/: fragmentShader.glsl  threeWithShaders.tsx  vertexShader.glsl
(+28 files in other folders)
